[package]
name = "pastebin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
clap = { version = "4.5.37", features = ["derive"] }
futures = "0.3.31"
parking_lot = "0.12.3"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
hex = "0.4"
